[project]
name = "stakeholder-value-networks-notebook"
version = "0.1.0"
description = "Equation-focused teaching notebook for ARCH8833 DDMDS Spring 2026."
requires-python = ">=3.11"
dependencies = [
  "ipykernel>=6.29.5",
  "jupyterlab>=4.4.0",
  "matplotlib>=3.10.0",
  "nbclient>=0.10.2",
  "nbformat>=5.10.4",
  "networkx>=3.4.2",
  "numpy>=2.2.2",
  "pandas>=2.2.3",
  "pyvis>=0.3.2",
  "scipy>=1.15.1",
  "sympy>=1.13.3",
]

[tool.uv]
package = false
